2000-11-12   Daiki Ueno  <ueno@unixuser.org>

	* smtp.el (smtp-primitive-data): Use `beginning-of-line' instead of
	`forward-char'.
	(smtp-read-response): Don't bind `case-fold-search'.
	(smtp-send-data): Don't save excursion.

2000-11-10   Daiki Ueno  <ueno@unixuser.org>

	* sasl-digest.el (sasl-digest-md5-challenge): Abolish.
	(sasl-digest-md5-syntax-table): Rename from
	`sasl-digest-md5-parse-digest-challenge-syntax-table'.
	(sasl-digest-md5-parse-string): Rename from
	`sasl-digest-md5-parse-digest-challenge'; only return a property list.
	(sasl-digest-md5-challenge): Abolish.
	(sasl-digest-md5-build-response-value-1): Abolish.
	(sasl-digest-md5-response-value): Define as function.
	(sasl-digest-md5-response): Rewrite.

	* tests/test-sasl.el (test-sasl-digest-md5-imap): New testcase.
	(test-sasl-digest-md5-acap): New testcase.

2000-11-10   Daiki Ueno  <ueno@unixuser.org>

	* lunit.el (lunit-make-test-suite-from-class): New function.
	(lunit-class): Abolish.
	(lunit-test-results-buffer): Abolish.

	* FLIM-ELS (check-flim): New function.

	* Makefile (check): New target.

	* tests: New directory.

2000-11-09   Daiki Ueno  <ueno@unixuser.org>

	* lunit.el (lunit-test-method-regexp): New variable.
	(lunit-class): New function.

2000-11-09   Daiki Ueno  <ueno@unixuser.org>

	* lunit.el: New file.

2000-11-07   Kenichi OKADA  <okada@opaopa.org>

	* sasl.el (sasl-login-response-1): Fix.
	(sasl-login-response-2): Fix.

2000-11-07   Daiki Ueno  <ueno@unixuser.org>

	* smtp.el (smtp-sasl-properties): New user option.
	(smtp-sasl-user-realm): Abolish.

2000-11-05   Daiki Ueno  <ueno@unixuser.org>

	* qmtp.el (qmtp-send-package): Don't check "K" reply per recipient.
	(qmtp-via-smtp): Mark as obsolete.
	(qmtp-send-buffer): New function.

	* sasl.texi: New file.

2000-11-05   Daiki Ueno  <ueno@unixuser.org>

	* sasl.el (sasl-step-data): New function.
	(sasl-step-set-data): New function.

2000-11-04   Daiki Ueno  <ueno@unixuser.org>

	* sasl.el: Don't require 'poe'